A lot of little fixes for readability
A lot of little fixes for readability. Also added text to "about" page.
And some changes in layout for mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ body
 
 #hide_show_btn
 {
-	position: absolute;
+
 	width: 210px;
 	right: 0px;
 	top: 0px;
